# minime

./: .gitattributes  .gitignore  AGENTS.md  AGENTS.public.md  Justfile  MAP_ALPINE.md  MAP_DUPLICATED.md  Makefile  README.md  deploy_sample.cfg  opencode.json  temp  wifi_sample.cfg
.antigravitycli/: cdae9c06-df30-4110-9105-8a4f8a49f65e.json
.github/workflows/: alpine.yml  bootloader.yml  buildroot-h700.yml  buildroot-prebuilt-llvm.yml  buildroot-rk3326.yml  buildroot-rk3566.yml  buildroot.yml  update-packages.yml
alpine/: .gitignore  .shellcheckrc  AGENTS.md  Makefile  README.md
alpine/.github/workflows/: build-alpine.yml  build-h700.yml  build-panfrost-prebuilt.yml  build-rk3326.yml  build-rk3566.yml  build-sdk-rk3566.yml  build.yml
alpine/alpine/configs/: world-common  world-h700  world-rk3326  world-rk3566
alpine/alpine/container/: Dockerfile
alpine/alpine/kernel/: tiny-alpine.config
alpine/alpine/scripts/: build.sh
alpine/aports/allium/: APKBUILD
alpine/aports/allium-themes/: APKBUILD
alpine/aports/bootsplash/: APKBUILD  bootsplash.c  gba.c
alpine/aports/drkhrse-miyoo-bezels/: APKBUILD
alpine/aports/dufs/: APKBUILD
alpine/aports/fatresize/: APKBUILD
alpine/aports/libmali/: libmali_shim.c
alpine/aports/libretro-cores/: APKBUILD
alpine/aports/libretro-headers/: APKBUILD
alpine/aports/minime-overlay/: APKBUILD
alpine/aports/minui/: APKBUILD
alpine/aports/preloaded-roms/: APKBUILD
alpine/aports/retroarch/: APKBUILD
alpine/aports/retroarch-frontend/: APKBUILD
alpine/aports/rg35xxsp/: APKBUILD
alpine/aports/syncthing/: APKBUILD
alpine/aports/tiny-kernel/: APKBUILD
alpine/aports/tinykernel/: APKBUILD
alpine/aports/u-boot/: APKBUILD
alpine/board/common/: boot.cmd  check-traits.sh  initramfs-init.sh  post-image.sh  tiny-base.config  tiny-libmali.config  tiny-panfrost.config  uboot.config
alpine/board/h700/: board.env  boot.cmd  boot.env  ddr3.defconfig  genimage.cfg  patches  tiny-h700.config  traits  uboot.config
alpine/board/rg35xxsp/: linux.config
alpine/board/rk3326/: board.env  boot.cmd  boot.env  genimage.cfg  patches  tiny-rk3326.config  traits  uboot.config
alpine/board/rk3566/: boot.cmd  boot.env  genimage.cfg  tiny-rk3566.config  uboot.config
alpine/bootloader/rk3326/: idbloader.img  u-boot.itb
alpine/bootloader/rk3566/: idbloader.img  u-boot.itb
alpine/configs/: world-common  world-h700  world-rk3326
alpine/container/: Dockerfile  minime-builder.rsa  minime-builder.rsa.pub
alpine/scripts/: build.sh  check_panfrost_release.sh  check_rebuild.py  generate_packages_doc.py  migrate_to_docker.sh  package_panfrost_prebuilt.sh  prepare-linux.sh  run.sh
alpine/scripts/linux/: clean-vm.sh
alpine/scripts/mac/: clean.sh  copy_images.sh
alpine/support/buildroot-patches/: 0001-mesa3d-remove-llvm-dep.patch  0002-mesa3d-panfrost-host-precomp.patch  0003-host-llvm-clang-libclc-virtual-system.patch
alpine/world/: base.world
aports/libmali/: APKBUILD
aports/tiny-kernel/: APKBUILD
board/rg35xxsp/: linux.config  openrc-services.conf
buildroot/: .gitattributes  .gitignore  Makefile  README.md
buildroot/.github/workflows/: build-h700.yml  build-panfrost-prebuilt.yml  build-rk3326.yml  build-rk3566.yml  build-sdk-rk3566.yml  lint.yml
buildroot/aports/libmali/: APKBUILD
buildroot/container/: Dockerfile
buildroot/docker/: Dockerfile
buildroot/prebuilt-llvm/: README.md
buildroot/scripts/: check-defconfigs.py  check_panfrost_release.sh  check_rebuild.py  generate_packages_doc.py  llvm-channel-manifest.py  package-prebuilt-llvm.sh  package_panfrost_prebuilt.sh  patch_mali_dma_heap.py  prepare-linux.sh  run_smoke_test.sh
buildroot/world/: base.world
docs/: C_STYLE.md  INFRA.md  KERNEL.md  MAP.md  MAP_BINARIES.md  MAP_BUILDROOT.md  MAP_SHARED.md  PACKAGES.md  STYLE.md  TODO.md  rk3566-undervolt.md
docs/adr/: 0001-fat32-cluster-and-image-sizing.md  0002-ui-decoupling-and-traits-contract.md  0003-h700-power-management-and-suspend.md  minime_monorepo_decisions.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/research/: axp717-power-button-h700.md
docs/spec/: firstboot-device-selector.md
drivers/mali-kbase/: BUILD.bazel
drivers/mali-kbase/product/kernel/config/fragment/: BUILD.bazel
drivers/mali-kbase/product/kernel/drivers/gpu/arm/midgard/: BUILD.bazel  Kbuild  mali_kbase_core_linux.c  mali_kbase_jd.c  mali_kbase_js.c  mali_kbase_mem.c  mali_linux_trace.h
drivers/mali-kbase/product/kernel/drivers/gpu/arm/midgard/backend/gpu/: mali_kbase_devfreq.c  mali_kbase_jm_hw.c  mali_kbase_js_backend.c  mali_kbase_pm_driver.c  mali_kbase_pm_metrics.c
drivers/mali-kbase/product/kernel/drivers/gpu/arm/midgard/csf/: mali_kbase_csf_scheduler.c
drivers/mali-kbase/product/kernel/drivers/gpu/arm/midgard/device/: mali_kbase_device.c
drivers/mali-kbase/product/kernel/drivers/gpu/arm/midgard/ipa/backend/: mali_kbase_ipa_counter_common_jm.h  mali_kbase_ipa_counter_jm.c
drivers/mali-kbase/product/kernel/drivers/gpu/arm/midgard/mmu/: mali_kbase_mmu.c
drivers/mali-kbase/product/kernel/drivers/gpu/arm/midgard/platform/devicetree/: mali_kbase_runtime_pm.c
drivers/mali-kbase/product/kernel/drivers/gpu/arm/midgard/tests/: BUILD.bazel
drivers/mali-kbase/product/kernel/drivers/gpu/arm/midgard/tl/: mali_kbase_tracepoints.c  mali_kbase_tracepoints.h
drivers/mali-kbase/product/kernel/drivers/xen/arm/: BUILD.bazel
roms/: README.md  install.sh
roms/arc/: Golden Axe (World) (Unl).chd
roms/neocd/: Shinobi (World) (v1.1) (Unl).chd
scripts/: build-bootloader.sh  check-firmware.py  check-hashes.py  check-kernel-config.py  check-openrc-deps.py  check-patches.py  prepare-linux.sh  prepare.sh  run_smoke_test.sh
scripts/linux/: copy_images.sh  prepare.sh  run.sh  shell.sh
scripts/mac/: shell.sh
scripts/uptodate/: uptodate.py
src/bootsplash/: Makefile  bootsplash.h  dmg.c
src/libmali/: 0001-fix-gcc14-int-conversion.patch
src/mali-kbase/drivers/base/arm/: BUILD.bazel  Kbuild
src/mali-kbase/drivers/base/arm/memory_group_manager/: memory_group_manager.c
world/: base.world  sp.world
(+191 files in other folders)
