# SPDX-License-Identifier: GPL-2.0 WITH Linux-syscall-note
#
# (C) COPYRIGHT 2023-2025 ARM Limited. All rights reserved.
#
# This program is free software and is provided to you under the terms of the
# GNU General Public License version 2 as published by the Free Software
# Foundation, and any use by you of this program is subject to the terms
# of such GNU license.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, you can access it online at
# http://www.gnu.org/licenses/gpl-2.0.html.
#
#

load(
    "@kleaf//build/kernel/kleaf:kernel.bzl",
    "ddk_headers",
    "ddk_module",
    "kernel_module_group",
)
load("//config:cflags.bzl", "CFLAGS_MODULE")

package(
    default_visibility = [
        "//:__subpackages__",
        "@kleaf//common:__pkg__",
    ],
)

ddk_headers(
    name = "mali_kernel_headers",
    hdrs = [
        "//:kernel_headers",
        "@kleaf//common:all_headers",
    ],
)

kernel_module_group(
    name = "base",
    srcs = [
               ":memory_group_manager",
           ] +
           select({
               "//config:dma_shared_buffer": [
                   ":dma-buf-test-exporter",
               ],
               "//conditions:default": [],
           }),
)

filegroup(
    name = "base_kconfig",
    srcs = ["Kconfig"],
)

ddk_module(
    name = "dma-buf-test-exporter",
    srcs = glob(["dma_buf_test_exporter/*.c"]),
    out = "dma-buf-test-exporter.ko",
    hdrs = [":mali_kernel_headers"],
    copts = CFLAGS_MODULE,
    defconfig = "//config/fragment:base_defconfig",
    kconfig = ":base_kconfig",
    kernel_build = "@kleaf//common:kernel",
)

ddk_module(
    name = "memory_group_manager",
    srcs = glob(["memory_group_manager/*.c"]),
    out = "memory_group_manager.ko",
    hdrs = [":mali_kernel_headers"],
    copts = CFLAGS_MODULE,
    defconfig = "//config/fragment:base_defconfig",
    kconfig = ":base_kconfig",
    kernel_build = "@kleaf//common:kernel",
)

ddk_module(
    name = "protected_memory_allocator",
    srcs = glob(["protected_memory_allocator/*.c"]),
    out = "protected_memory_allocator.ko",
    hdrs = [":mali_kernel_headers"],
    copts = CFLAGS_MODULE,
    defconfig = "//config/fragment:base_defconfig",
    kconfig = ":base_kconfig",
    kernel_build = "@kleaf//common:kernel",
)

